ckage>
  <name>hector_slam_demos</name>
  <version>0.0.1</version>
  <description>
    Hector slam demos for 3d sensor and lidar.
  </description>

  <maintainer email="1271087623@qq.com">Playfish</maintainer>


  <license>BSD</license>


  <author email="1271087623@qq.com">Playfish</author>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roch_bringup</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
  <run_depend>hector_mapping</run_depend>
  <run_depend>hector_geotiff</run_depend>

  <export>
  </export>
</package>
